--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link src=".assets/css/style.css" />
     <title>Pfizz Quiz!</title>
   </head>
   <body>
@@ -19,6 +20,6 @@
 
     <div id="change-question">Change Question</div>
 
-    <script src="./script.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
